# flutter_distro

./: .env.example  .gitignore  README.md  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/fbuild_backend/: __init__.py  config.py  db.py  main.py
backend/src/fbuild_backend/api/routes/: builds.py  health.py  projects.py
backend/src/fbuild_backend/repositories/: __init__.py  build_jobs.py  build_logs.py  projects.py
backend/src/fbuild_backend/schemas/: build_jobs.py  build_logs.py  projects.py
backend/src/fbuild_backend/services/: __init__.py  artifact_store.py  build_executor.py  build_worker.py  build_worker_loop.py  cleanup.py  cleanup_loop.py  git_projects.py  pgyer_uploader.py
backend/src/fbuild_backend/utils/: projects.py
backend/tests/: test_api_builds.py  test_api_projects.py  test_build_executor.py  test_build_queue_repository.py  test_build_worker.py  test_build_worker_loop.py  test_cleanup.py  test_git_projects.py  test_pgyer_uploader.py  test_project_utils.py
docs/: DEPLOYMENT.md
frontend/: Dockerfile  README.md  pubspec.yaml
frontend/lib/: api_client.dart  app.dart  dashboard_page.dart  main.dart  models.dart
frontend/nginx/: default.conf
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
