[project]
name = "fbuild-backend"
version = "0.1.0"
description = "Backend service for the F-Build Flutter build system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.118.0,<1.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "uvicorn[standard]>=0.37.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.13.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fbuild_backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
